# cukcuk

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi.yaml
cukcuk/: __init__.py  async_login_session.py  branch.py  common.py  invoice.py  login_session.py  storage.py
src/: lib.rs  main.rs  session.rs
src/model/: branch.rs  invoice.rs  login.rs  mod.rs  service.rs
src/session/: branch.rs  invoice.rs  login.rs  mod.rs
src/utils/: mod.rs
