[package]
name = "cukcuk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">=1"
chrono = ">=0.4"
hmac = ">=0.12"
reqwest = { version = "0.11", features = ["cookies", "gzip", "rustls", "json"] }
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
sha2 = ">=0.10"
thiserror = ">=1"
tokio = { version = ">=1", features = ["full"] }
